# boy-sminem

./: docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: __main__.py  config.py  routes.py
backend/app/ml/: constant.py  inference.py
frontend/: Dockerfile  package.json
frontend/src/: index.css
frontend/src/app/: App.js
frontend/src/features/: Sminem.js  Sminem.scss
