[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["sminem <boy-sminem@danwin1210.de>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.1"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"
timm = "^0.5.4"
torch = "^1.11.0"
torchvision = "^0.12.0"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
websockets = "^10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
